# tail-app

./: CLAUDE.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/: index.html
scripts/: gen-icons.mjs  generate_mixed_encoding.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: file.rs  ssh.rs  watch.rs
src/components/HelpModal/: index.tsx
src/components/LogViewer/: index.tsx
src/components/SearchBar/: index.tsx
src/components/Sidebar/: index.tsx
src/components/TabBar/: index.tsx
src/components/Toolbar/: index.tsx
src/hooks/: useUpdater.ts
src/i18n/: translations.ts
src/stores/: bookmarkStore.ts  settingsStore.ts  tabStore.ts
src/types/: index.ts
