[package]
name = "logr"
version = "0.2.6"
description = "Realtime log viewer — a GUI replacement for Unix tail -f"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "Logr"
path = "src/main.rs"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "logr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }
encoding_rs = "0.8"
notify = "6"
regex = "1"
tauri-plugin-store = "2"
chardet = "0.2"
russh = "0.44"
russh-keys = "0.44"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

